unpackaged/main/default/objects/AllSmartCalling__mdt/AllSmartCalling__mdt.object-meta.xml
<CustomObject>
    <label>AllSmartCalling</label>
    <pluralLabel>AllSmartCallings</pluralLabel>
</CustomObject>