unpackaged/main/default/objects/AllSmartCalling__mdt/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked - displays Sold/Not Sold and Bad Phone on the sidebar.</description>
    <label>Additional Info</label>
    <type>Checkbox</type>
</CustomField>