unpackaged/main/default/objects/AllSmartCalling__mdt/fields/Close_Previous_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Close_Previous_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Previous Tasks</label>
    <type>Checkbox</type>
</CustomField>