unpackaged/main/default/objects/AllSmartCalling__mdt/fields/Current_Record__c.field-meta.xml
<CustomField>
    <fullName>Current_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Record</label>
    <type>Checkbox</type>
</CustomField>