unpackaged/main/default/objects/AllSmartCalling__mdt/fields/Hi_Opp_Stages__c.field-meta.xml
<CustomField>
    <fullName>Hi_Opp_Stages__c</fullName>
    <label>Hi Opp Stages</label>
    <type>TextArea</type>
</CustomField>