unpackaged/main/default/objects/AllSmartCalling__mdt/fields/HI_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>HI_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HI Opportunity</label>
    <type>Checkbox</type>
</CustomField>