unpackaged/main/default/objects/AllSmartCalling__mdt/fields/Inbound_Call__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inbound Call</label>
    <type>Checkbox</type>
</CustomField>