unpackaged/main/default/objects/AllSmartCalling__mdt/fields/Payroll_Opp_Stages__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Opp_Stages__c</fullName>
    <label>Payroll Opp Stages</label>
    <type>TextArea</type>
</CustomField>