unpackaged/main/default/objects/AllSmartCalling__mdt/fields/Payroll_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll Opportunity</label>
    <type>Checkbox</type>
</CustomField>