unpackaged/main/default/objects/AllSmartCalling__mdt/fields/Product_Upsell__c.field-meta.xml
<CustomField>
    <fullName>Product_Upsell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Upsell</label>
    <type>Checkbox</type>
</CustomField>