unpackaged/main/default/objects/AllSmartCalling__mdt/fields/Show_Live_HI_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Show_Live_HI_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Live HI Transfer</label>
    <type>Checkbox</type>
</CustomField>