unpackaged/main/default/objects/AllSmartCalling__mdt/fields/Show_Sold_Not_Sold__c.field-meta.xml
<CustomField>
    <fullName>Show_Sold_Not_Sold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Sold Not Sold</label>
    <type>Checkbox</type>
</CustomField>